demo-2/tea.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: tea
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tea
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: tea
    spec:
      containers:
      - name: tea
        image: nginxdemos/hello
        ports:
        - containerPort: 80
          protocol: TCP
        resources:
          requests:
            cpu: 50m
            memory: 32Mi
          limits:
            cpu: 50m
            memory: 64Mi
