demo-2/coffee-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: coffee
  namespace: default
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: coffee
