demo-2/python-app-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: python-app
  namespace: default
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: python-app
  type: ClusterIP
