demo-2/tea-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: tea
  namespace: default
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: tea
